# CTemplates

./: .gitignore  README.md
CMakeTemplate/: .gitignore  CMakeLists.txt  makefile
CMakeTemplate/cmake/: clang_i386.cmake  clang_x86_64.cmake  function.print_properties.cmake  function.print_target_properties.cmake  function.set_kconfig_vars_from_file.cmake
CMakeTemplate/src/: CMakeLists.txt  debug_utils.h  main.c  projectname.c  projectname.h  testprojectname.c
CMakeTemplate/toolchains/: toolchain.i386-linux-clang.cmake  toolchain.x86_64-linux-clang.cmake
InjectionLib/: Makefile  inject.c
MakefileTemplate/: Makefile
ShellcodeLib/: Makefile  README.md  linkerscript.ld  script.ld  shellcode.c  shellcode_head.c  shellcode_runner.c
ShellcodeLib/include/: _syscall.h  utils.h
ShellcodeLib/scripts/: disasm.py  gen_c_syscall_macros.sh  testsc.py
ShellcodeLib/src/: shellcode.c  utils.c
ShellcodeLib/src/arch/x86_64/: _syscall.S
scripts/: copy_cmaketemplate.sh
